--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,9 +1,11 @@
 mail.smtp.auth = true
 mail.smtp.starttls.enable = true
 mail.smtp.host = smtp.gmail.com
-mail.smtp.port = 587  88888
+mail.smtp.port = 587
 
 sender.username = polak.mariola@gmail.com
 sender.password = 13031989
 
-name = Adam
+emails.excel.fileName = Emails.xlsx
+
+link = http://howtodoinjava.com/2013/06/19/readingwriting-excel-files-in-java-poi-tutorial/
