--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -8,4 +8,10 @@ sender.password = 13031989
 
 emails.excel.fileName = Emails.xlsx
 
+accountsFrame.column.name = Imi\u0119
+accountsFrame.column.surname = Nazwisko
+accountsFrame.column.email = E-mail
+
+gui.accountsTable.AccountsFrame.title = E-mail application
+
 link = http://howtodoinjava.com/2013/06/19/readingwriting-excel-files-in-java-poi-tutorial/
