--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,4 +10,4 @@ log4j.appender.CONSOLE.layout = org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} [%c] %p - %m%n
 
 log4j.logger.pl = DEBUG
-# log4j.logger.pl.trtech.paczkomat.core.service.device.RfidControllerService=ERROR, CONSOLE
+# log4j.logger.pl.trtech.paczkomat.core.com.mp.email.service.device.RfidControllerService=ERROR, CONSOLE
