--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -11,6 +11,7 @@ emails.excel.fileName = Emails.xlsx
 accountsFrame.column.name = Imi\u0119
 accountsFrame.column.surname = Nazwisko
 accountsFrame.column.email = E-mail
+accountsFrame.column.isSending = Czy wys\u0142a\u0107 e-mail?
 
 gui.accountsTable.AccountsFrame.title = E-mail application
 
