--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -8,6 +8,7 @@ sender.password = 13031989
 
 emails.excel.fileName = Emails.xlsx
 
+accountsFrame.column.id = ID
 accountsFrame.column.name = Imi\u0119
 accountsFrame.column.surname = Nazwisko
 accountsFrame.column.email = E-mail
