--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -14,6 +14,9 @@ accountsFrame.column.surname = Nazwisko
 accountsFrame.column.email = E-mail
 accountsFrame.column.isSending = Czy wys\u0142a\u0107 e-mail?
 
+accountsControler.removePaneMessage = Nie zaznaczono wiersza
+accountsControler.removePaneTitle = Info
+
 gui.accountsTable.AccountsFrame.title = E-mail application
 
 link = http://howtodoinjava.com/2013/06/19/readingwriting-excel-files-in-java-poi-tutorial/
