--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -15,8 +15,14 @@ accountsFrame.column.email = E-mail
 accountsFrame.column.isSending = Czy wys\u0142a\u0107 e-mail?
 
 accountsControler.removePaneMessage = Nie zaznaczono wiersza
-accountsControler.removePaneTitle = Info
+accountsControler.removePaneTitle = Informacja
+accountsControler.saveAndClosePaneWindow = Czy chcesz zapisa\u0107 zmiany?
 
 gui.accountsTable.AccountsFrame.title = E-mail application
+gui.addUser.AddUserFrame.title = Dodaj klienta
+
+gui.addUser.AddUserBtnPanel.saveBtnText = Zapisz
+gui.addUser.AddUserBtnPanel.cancelBtnText = Anuluj
+
 
 link = http://howtodoinjava.com/2013/06/19/readingwriting-excel-files-in-java-poi-tutorial/
