--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -24,5 +24,10 @@ gui.addUser.AddUserFrame.title = Dodaj klienta
 gui.addUser.AddUserBtnPanel.saveBtnText = Zapisz
 gui.addUser.AddUserBtnPanel.cancelBtnText = Anuluj
 
+gui.addUser.AddUserFormPanel.nameText = Imi\u0119:
+gui.addUser.AddUserFormPanel.surnameText = Nazwisko:
+gui.addUser.AddUserFormPanel.emailText = E-mail:
+
+
 
 link = http://howtodoinjava.com/2013/06/19/readingwriting-excel-files-in-java-poi-tutorial/
