--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <version>1.6.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
     </dependencies>
 
     <!-- jar file building -->
